--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<meta charset="utf-8">
+
+<header>
+	<div class="wrap">
+		<!-- add nav class here -->
+		<div class="content nav"></div>
+	</div>
+</header>
+
+<div class="main">
+	<div class="wrap">
+		<!-- content and sidebar are swapped -->
+		<div class="content"></div>
+		<div class="sidebar"></div>
+	</div>
+</div>
+
+<footer>
+	<div class="wrap">
+		<div class="sidebar"></div>
+		<div class="content"></div>
+	</div>
+</footer>
+
+</html>
