--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <div class="main">
 	<div class="wrap">
 		<!-- content and sidebar are swapped -->
-		<div class="content"></div>
+		<div class="content">
+			<p>Main content</p>
+		</div>
 		<div class="sidebar"></div>
 	</div>
 </div>
