--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 <header>
 	<div class="wrap">
+		<div class="title">
+			<h1>Nickolas Urbain</h1>
+		</div>
 		<!-- add nav class here -->
 		<div class="content nav"></div>
 	</div>
