--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html>
-<meta charset="utf-8">
+<html lang="eng">
 
-<header>
-	<div class="wrap">
-		<div class="title">
-			<h1>Nickolas Urbain</h1>
+<head>
+	<meta charset="utf-8">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="Nickolas Urbain">
+
+	<title>Nickolas Urbain</title>
+
+	<!-- Load in files -->
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" type="text/css" href="js/javascript.js">
+</head>
+
+<body id="page-top">
+	<header>
+		<div class="nav-container">
+			<img src="assets/headshot.jpg" alt="headshot" width="128" height="64" class="logo">
+
+			<nav>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Resume</a></li>
+					<li><a href="#">Projects</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</nav>
 		</div>
-		<!-- add nav class here -->
-		<div class="content nav"></div>
-	</div>
-</header>
-
-<div class="main">
-	<div class="wrap">
-		<!-- content and sidebar are swapped -->
-		<div class="content">
-			<p>Main content</p>
-		</div>
-		<div class="sidebar"></div>
-	</div>
-</div>
-
-<footer>
-	<div class="wrap">
-		<div class="sidebar"></div>
-		<div class="content"></div>
-	</div>
-</footer>
+	</header>
+</body>
 
 </html>
